--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/minlare/gulp-bemlint-html#readme",
   "dependencies": {
     "bemlint": "^1.6.1",
+    "debug": "^4.1.0",
     "ignore": "^5.0.4",
+    "lodash": "^4.17.11",
     "plugin-error": "^1.0.1",
     "through2": "^3.0.0"
   }
